[gd_scene load_steps=3 format=3 uid="uid://dkokn0br0qpfr"]

[ext_resource type="Script" path="res://scenes/control.gd" id="1_8htd1"]
[ext_resource type="Texture2D" uid="uid://c8e5w7fhwov42" path="res://assets/Menu/timer.png" id="2_rg55p"]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_8htd1")
secDefault = 9

[node name="control_hud" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="margin" type="MarginContainer" parent="control_hud"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -267.5
offset_bottom = -244.5
grow_horizontal = 2
grow_vertical = 2

[node name="container_score" type="HBoxContainer" parent="control_hud/margin"]
layout_mode = 2
size_flags_horizontal = 4

[node name="score" type="Label" parent="control_hud/margin/container_score"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 25

[node name="container_timer" type="HBoxContainer" parent="control_hud"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -28.0
offset_right = 27.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="timer_png" type="TextureRect" parent="control_hud/container_timer"]
layout_mode = 2
texture = ExtResource("2_rg55p")
expand_mode = 3

[node name="timer" type="Label" parent="control_hud/container_timer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 25

[node name="timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
